# TaiWei

./: .gitignore  .gitmodules  README.md  core.227803
3DEval/: Makefile  env.sh
3DEval/designs/asap7_3D/aes/: config.mk  config_bottom_cover.mk  config_upper_cover.mk  constraint.sdc
3DEval/designs/asap7_3D/gcd/: config.mk  config_bottom_cover.mk  config_upper_cover.mk
3DEval/designs/asap7_3D/ibex/: config.mk  config_bottom_cover.mk  config_upper_cover.mk
3DEval/designs/asap7_3D/jpeg/: config.mk  config_bottom_cover.mk  config_upper_cover.mk
3DEval/designs/asap7_nangate45_3D/aes/: config.mk  config_bottom_cover.mk  config_upper_cover.mk
3DEval/designs/asap7_nangate45_3D/gcd/: config.mk  config_bottom_cover.mk  (+1 more)
3DEval/experiment_scripts/: gcd.sh
3DEval/scripts_cadence/: extract_report.tcl  innovus_2d_flow.tcl  innovus_3d_cts.tcl  innovus_3d_final-re.tcl  innovus_3d_final.tcl  innovus_3d_route.tcl  innovus_opt_lg_bottom.tcl  innovus_opt_lg_upper.tcl  innovus_place3D_init_bottom.tcl  innovus_place3D_init_upper.tcl  lib_setup.tcl  mmmc_setup.tcl  tier_cell_policy.tcl
3DEval/scripts_openroad/: cts.tcl  final_report.tcl  generate_3d_views.py  io_place.tcl  load.tcl  opt_lg_bottom.tcl  opt_lg_upper.tcl  place_bottom.tcl  place_init.tcl  place_init_bottom.tcl  place_init_upper.tcl  place_upper.tcl  placement_utils.tcl
3DEval/test/clock/: eval.sh  run_clock_cds_nangate45+.sh  run_clock_cds_nangate45-.sh  run_clock_cds_nangate45.sh  run_clock_ord_nangate45+.sh  run_clock_ord_nangate45-.sh  run_clock_ord_nangate45.sh
3DEval/test/pitch/: eval.sh  run_pitch_cds_asap7.sh  run_pitch_cds_asap7_eval.sh  run_pitch_ord_asap7.sh  run_pitch_ord_asap7_eval.sh
DOC/: TaiWei-QuickStart.md
lgista1.0/: CMakeLists.txt  README.md  TEST_PLAN.md
lgista1.0/include/lgista/: LocalGraphIsta.hh  LrfClass.hh
lgista1.0/src/: IstaWriteback.cc  IstaWriteback.hh  LgistaMain.cc  LgistaTests.cc  LgistaTests.hh  LocalDmpDelayCalc.cc  LocalDmpDelayCalc.hh  LocalElmoreCeffDelayCalc.cc  LocalElmoreCeffDelayCalc.hh  LocalGraphIsta.cc  LocalParasitics.cc  LocalParasitics.hh  LocalPath.cc  LocalReduceParasitic.cc  LocalReduceParasitic.hh  LocalSearch.cc  LocalSearch.hh  LocalSta.cc  LocalSta.hh  LrfSearchPred.cc  LrfSearchPred.hh  PtElmoreCeff.cc  PtElmoreCeff.hh  PtGraph.cc  PtGraph.hh  PtPiElmore.cc  PtPiElmore.hh  SlewPropogation.hh  ViolationCheck.cc
lgista1.0/test/: chain.v
(+63 files in other folders)
